BBB participant list working with one BigBlueButton server.

--- a/bbb-mon/frontend/index.html
+++ b/bbb-mon/frontend/index.html
@@ -25,6 +25,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">No. users</th>
                         <th scope="col">Moderators</th>
+                        <th scope="col">Participants</th>
                         <th scope="col">Origin Server</th>
                         <th scope="col">Origin Context</th>
                         <th scope="col">Creation</th>
@@ -48,8 +49,7 @@
         <div class="container">
             <small>BigBlueButton Monitoring Version: <span id="text-version"></span> <br></small>
             <span class="text-muted">
-                Copyright &copy; <script>document.write(new Date().getFullYear())</script>
-                <a href="https://github.com/greenstatic/bigbluebutton-monitoring">https://github.com/greenstatic/bigbluebutton-monitoring</a>
+                <a href="https://github.com/wallace6176/bigbluebutton-monitoring">https://github.com/wallace6176/bigbluebutton-monitoring</a>
             </span>
         </div>
     </footer>
