--- a/bbb-mon/frontend/index.html
+++ b/bbb-mon/frontend/index.html
@@ -10,12 +10,12 @@
     <!-- Begin page content -->
     <main role="main" class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">BigBlueButton Monitoring</h1>
+<!--            <h1 class="mt-5">BigBlueButton Monitoring</h1>-->
             <noscript>Sorry, Javascript is needed for this page to work. Yeah it sucks.</noscript>
 
-            <p class="lead">Quick overview of all current meetings on BigBlueButton</p>
+<!--            <p class="lead">Quick overview of all current meetings on BigBlueButton</p>-->
 
-            <p>BigBlueButton Server: <span id="text-server"></span></p>
+            <p class="lead">BigBlueButton Server: <span id="text-server"></span></p>
             <p>Last refresh: <span id="text-last-refresh"></span></p>
 
             <table id="meetings" class="table table-striped">
@@ -45,14 +45,14 @@
         </div>
     </main>
 
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            <small>BigBlueButton Monitoring Version: <span id="text-version"></span> <br></small>
-            <span class="text-muted">
-                <a href="https://github.com/wallace6176/bigbluebutton-monitoring">https://github.com/wallace6176/bigbluebutton-monitoring</a>
-            </span>
-        </div>
-    </footer>
+<!--    <footer class="footer mt-auto py-3">-->
+<!--        <div class="container">-->
+<!--            <small>BigBlueButton Monitoring Version: <span id="text-version"></span> <br></small>-->
+<!--            <span class="text-muted">-->
+<!--                <a href="https://github.com/wallace6176/bigbluebutton-monitoring">https://github.com/wallace6176/bigbluebutton-monitoring</a>-->
+<!--            </span>-->
+<!--        </div>-->
+<!--    </footer>-->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
