Saved meetings to Postgres database, every 10 minutes

--- a/bbb-mon/frontend/index.html
+++ b/bbb-mon/frontend/index.html
@@ -36,7 +36,7 @@
                     </tbody>
             </table>
 
-            <p><small>Automatically refreshes every 15 seconds.</small></p>
+            <p><small>Automatically refreshes every 10 minutes.</small></p>
 
             <div class="loading-spinner spinner-border" role="status">
                 <span class="loading-spinner sr-only">Loading...</span>
